[package]
name = "minifps"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.11.3"
miniquad = { git = "https://github.com/cedric-h/miniquad", branch = "cursor_grab" }
